@@ -246,9 +246,11 @@ def rpy2py_posixct(obj):
 
 @rpy2py.register(DataFrame)
 def rpy2py_dataframe(obj):
-    items = OrderedDict((k, rpy2py(v) if isinstance(v, Sexp) else v)
-                        for k, v in obj.items())
-    res = PandasDataFrame.from_dict(items)
+    rpy2py = conversion.get_conversion().rpy2py
+    res = pandas.DataFrame.from_dict(
+        OrderedDict((i, rpy2py(_)) for i, _ in enumerate(obj))
+    )
+    res.columns = obj.colnames
     res.index = obj.rownames
     return res
 
